# voxel-archive

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cc
resources/assets/projects/Level/: project.xml
resources/assets/projects/Level/fixtures/: COLOR.xml  FIXTURE.xml  FIXTURE2.xml  FIXTURE3.xml  FIXTURE4.xml  FIXTURE5.xml
resources/assets/projects/Level/game_objects/: Chunk.xml  GAME OBJECT.xml
resources/shaders/: helpers.sc
resources/shaders/core/: core.fs.sc  core.vs.sc
resources/shaders/debug/: debug.fs.sc  debug.vs.sc  uniforms.sc  varying.def.sc
resources/shaders/light/: light.fs.sc  light.vs.sc
resources/shaders/lighting/: phong.fs.sc  phong.vs.sc
scripts/: build.sh  compile_shaders.py  run.sh
src/: camera.cc  camera.h  geometry.cc  geometry.h  math.h  paths.h  resources.cc  resources.h  trigonometry.h  window.cc  window.h
src/ctrl/: button.h  camera.cc  camera.h  input.cc  input.h  key.cc  key.h  key_input.cc  key_input.h  mouse_input.cc  mouse_input.h
src/fixtures/: base_layer.h  fixture.cc  fixture.h
src/fizz/: material.cc  material.h  neohookean_strain_energy_density.h
src/gfx/: bgfx.h  block.cc  block.h  chunk.cc  chunk.h  chunk_renderer.cc  chunk_renderer.h  chunk_storage.cc  chunk_storage.h  glfw.h  primitive.h  program.h
src/gui/: input_text.cc  input_text.h  menu_bar.cc  menu_bar.h  styles.cc  styles.h
src/imgui_multiplatform/: droidsans.ttf.h  fs_imgui_image.bin.h  icons_font_awesome.ttf.h  icons_kenney.h  icons_kenney.ttf.h  imgui.cpp  imgui.h  roboto_regular.ttf.h  robotomono_regular.ttf.h  vs_imgui_image.bin.h  vs_ocornut_imgui.bin.h
src/level_editor/: chunk_menu.cc  chunk_menu.h  project.cc  project.h  project_menu.cc  project_menu.h  settings_menu.cc  settings_menu.h
src/util/: collections.h  colors.cc  colors.h  files.cc  files.h  strings.cc  strings.h  timer.cc  timer.h  uuid.h
src/widgets/: imgui_toast.cc  imgui_toast.h
tests/: CMakeLists.txt  placeholder_test.cc  util_test.cc
